--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "firebase": "^9.0.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
