--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.0.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.4.0"
   }
 }
